# CHANGES TO MTurkR 0.5 #

## SIGNIFICANT USER-VISIBLE CHANGES ##
* The `qual.number` argument to `GenerateQualificationRequirement` has been removed.
* The `return.hit.dataframe` argument to `GetHITsForQualificationType` has been removed.
* Functions of the form `*ToDataFrame` have been replaced with `as.data.frame` S3 methods, which are handled by a global `as.data.frame.MTurkResponse` function. (#36)
* `ParseErrorCodes` is removed (now used internally in `request`).
* `options('MTurkR.print')` is deleted and replaced by `options('MTurkR.verbose')`. All functions will, temporarily, accept `print` arguments. All code should be updated to reflect the new terminology moving forward.
* When `validation.test=TRUE` or `browser=TRUE`, functions now return an object of class "MTurkResponse" for the purpose of debugging.
* The ability to execute requests in a web browser, via the `options('MTurkR.browser')` is removed from all functions except `request`. It can, however, still be passed via `...` to `request`. (#38)
* `APIReference`, `mturkhelp`, and `genericmturkr` are deprecated.
* `GetBonuses` no longer supports the `return.bonus.dataframe` logical. All bonuses are automatically returned. To just retrieve details on number of bonuses per HIT, request only the first page with `page.number=1` and `verbose=TRUE`.
* `MTurkR.Wizard` now allows batch emails using `ContactWorkers`. WorkerIds can be specified as a comma-separated list. (#4)
* The `credentials` function has now been changed to create and/or retrieve a global option `MTurkR.keypair`. This is a backwards compatible change that allows users to specify `options(MTurkR.keypair=c(accesskey, secretkey))` directly without using `credentials`. All functions now point directly to the global option, so that `credentials` can be deprecated in a future release.
* In many functions that return a dataframe with a `Valid` column (e.g., `ContactWorkers`, etc.), `Valid` is now a factor. (#28)