@@ -11,8 +11,8 @@ GenerateQualificationRequirement(qual,
 }
 \arguments{
   \item{qual}{A character string containing a QualificationTypeId, or a vector of QualificationTypeIds. This parameter also accepts shorthand labels for built-in QualificationTypes: \dQuote{Approved} (percent of assignments approved), \dQuote{NumberApproved} (number of assignments approved), \dQuote{Locale}, \dQuote{Adult}, and MTurk \dQuote{masters} QualificationTypes (\dQuote{Masters}, \dQuote{Categorization}, or \dQuote{Photo Moderation}).}
-  \item{comparator}{A character string containing a comparator, or a vector of comparators, by which a worker's score of a qualification is compared to the specified \code{value}. One of \code{<},\code{<=},\code{>},\code{>=},\code{==},\code{!=},\code{Exists}. For \dQuote{Masters}-type qualifications, only \code{Exists} is available.}
-  \item{value}{A numeric or character string value (or vecotr of such) against which workers scores will be compared. Must be a non-negative integer.}
+  \item{comparator}{A character string containing a comparator, or a vector of comparators, by which a worker's score of a qualification is compared to the specified \code{value}. One of \code{<},\code{<=},\code{>},\code{>=},\code{==},\code{!=},\dQuote{Exists},\dQuote{DoesNotExist},\dQuote{In},\dQuote{NotIn}. For \dQuote{Masters}-type qualifications, only \code{Exists} is available.}
+  \item{value}{A numeric or character string value (or vector of such) against which workers scores will be compared. Must be a non-negative integer, except when \code{qualification="Locale"} (when it must be a two-digit country code). To .}
   \item{preview}{An optional logical specifying whether a worker must have the Qualification in order to preview the HIT on the MTurk worker site. The default is \code{FALSE}.}
   \item{qual.number}{An argument for primarily internal use.}
 }
@@ -32,10 +32,19 @@ A convenience function to translate the details of a QualificationRequirement in
 }
 \examples{
 a <- ListQualificationTypes()[2,2] # Number of HITs Approved
+# one QualificationRequirement
 q1 <- GenerateQualificationRequirement(a,">","90")
+# two QualificationRequirements
 q2 <- GenerateQualificationRequirement(c("Locale","Approved"), 
                                        c("==",">"), 
                                        c("US",90), 
                                        preview = TRUE)
+# one QualificationRequirement using the `In` comparator
+q3 <- GenerateQualificationRequirement("Locale","In","US,UK")
+# two QualificationRequirements using the `In` comparator
+q4 <- GenerateQualificationRequirement(c("Locale","Approved"), 
+                                       c("==",">"), 
+                                       c("US,UK,DK",90), 
+                                       preview = c(TRUE,FALSE))
 }
 \keyword{Qualifications}
